Assignments/Assignment-2/manifest/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dso202-assignment-02
